# source-ingestion-demo

./: .env  .env.example  .gitattributes  .gitignore  Overview Data Pipeline.docx  README.md  docker-compose.member2-plug.yml  docker-compose.yml  guideline.md
.github/: copilot-instructions.md
apps/chatserver/: Dockerfile  main.py  pyproject.toml
apps/chatserver/warehouse_chatserver/: __init__.py  app.py  clickhouse.py  config.py  db.py  mcp_toolset.py  message_handler.py  models.py  realtime.py  warehouse_agent.py  warehouse_mcp.py
apps/chatui/: Dockerfile  package-lock.json  package.json
clickhouse_init/: init_tables.sql
docker/grafana/: Dockerfile
docker/logstash/: Dockerfile
docker/sqlserver-generator/: Dockerfile  entrypoint.sh
docker/sqlserver-init/: Dockerfile  entrypoint.sh  init_inventory.sql
docs/: logstash_ingestion_intervals.md  overall_schema.dbml  plug_contract.md  schema_mart.dbml  schema_raw.dbml
docs/grafana-role-dashboard-report/: dashboard_feature_summary.md
docs/members/: 3_kafka2clickhouse.md
docs/tech/: apache kafka.md  clickhouse.md
grafana/: BUSINESS_REQUIREMENTS.md  DASHBOARD_FIELD_GLOSSARY.md
grafana/dashboards/: inventory-aging-performance.json  inventory-data-reliability.json  inventory-executive-summary.json  inventory-movement-operations.json  (+6 more)
scripts/: bootstrap_pipeline.sh  check_population.sh  clickhouse_check.sql  generate_grafana_dashboards.py  insert_demo.sql  refresh_mart_dims.sh  refresh_mart_facts.sh  refresh_mart_facts.sql  refresh_stg.sh  refresh_stg.sql  show_source_data.sql  source_volume.sql
(+22 files in other folders)
